--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@
   background-color: #347758;
   p {
     color: white;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 700;
     margin: 1rem;
     cursor: default;
@@ -29,8 +29,10 @@
 }
 
 .headerRight {
+  // display: flex;
+  // justify-content: end;
   display: flex;
- justify-content: end;
+  justify-content: flex-end;
   gap: 20px;
 }
 
@@ -39,9 +41,9 @@
 }
 
 @media screen and (max-width: 768px) {
-  .langButoon {
-    display: none;
-  }
+  // .langButoon {
+  //   display: none;
+  // }
   .headerLeft {
     display: none;
   }
