--- a/src/components/FreeShipping/FreeShipping.module.scss
+++ b/src/components/FreeShipping/FreeShipping.module.scss
@@ -2,24 +2,27 @@
   margin: 30px 0;
 }
 .imglogo {
-  width: 180px;
+  width: 110px;
 }
 
 .icon {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .title {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 700;
   font-family: Poppins, HelveticaNeue, Helvetica Neue, sans-serif;
-  color: #222;
+ 
   text-transform: uppercase;
   margin-bottom: 8px;
+  color: #0d7a52;
 }
 
 .text {
-  font-size: 0.7rem;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #0d7a52;
 }
