--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -70,3 +70,11 @@
   }
 }
 
+.langbtnheader{
+      background: #e3c317;
+    color: white;
+     border:  none;
+     border-radius: 5px;
+     margin: 0 5px;
+}
+
