--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -14,13 +14,23 @@ h1{
 }
 
 .p{
+    margin-top: 1rem;
     font-size: 1rem;
     font-weight: 800;
     font-family: Poppins, HelveticaNeue, Helvetica Neue, sans-serif;
     color: #78b144;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .left{
     text-align: center;
+}
+
+.call{
+    border-radius: 10%;
+    border: none;
+    background: #0d7a52;
+    color: white;
+
 }
